Bug 331491 - default help menu has no icon for ktp contact list inside ktp contact list
Summary: default help menu has no icon for ktp contact list inside ktp contact list
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.7.80
Platform: unspecified Linux
: VLO normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-25 12:26 UTC by Harald Sitter
Modified: 2014-02-27 12:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.0
Sentry Crash Report:


Attachments
screenshot of problem (21.72 KB, image/png)
2014-02-25 12:28 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-02-25 12:26:20 UTC
in the contact list window, when navigating the 'wrench icon' -> 'Help' -> 'About KDE Telepathy Contact List', the menu item 'About KDE Telepathy Contact List' doesn't have the correct icon associated with it.

Reproducible: Always
Comment 1 Harald Sitter 2014-02-25 12:28:28 UTC
Created attachment 85318 [details]
screenshot of problem
Comment 2 Harald Sitter 2014-02-25 12:31:22 UTC
FWIW, this might be a general problem with all KTP guis, as the Chat Ui also suffers from the same problem.
Comment 3 David Edmundson 2014-02-25 13:27:53 UTC
Thanks.
Comment 4 Alexandr Akulich 2014-02-27 12:02:39 UTC
Git commit 98118f099fd3a2cf7273a6441f0ccac4db812243 by Alexandr Akulich.
Committed on 27/02/2014 at 11:52.
Pushed by akulichalexandr into branch 'master'.

Set application icon globally in aboutData, instead of in MainWidget only.

REVIEW: 116115
FIXED-IN: 0.8.0

M  +0    -1    main-widget.cpp
M  +1    -0    main.cpp

http://commits.kde.org/telepathy-contact-list/98118f099fd3a2cf7273a6441f0ccac4db812243
Comment 5 Martin Klapetek 2014-02-27 12:21:34 UTC
Git commit a6ee93cd9ffa514a7b4bc8ada84a248d557c4d7c by Martin Klapetek.
Committed on 27/02/2014 at 12:21.
Pushed by mklapetek into branch 'master'.

Make sure text-ui has proper icon in Help->About...

M  +1    -0    app/main.cpp

http://commits.kde.org/telepathy-text-ui/a6ee93cd9ffa514a7b4bc8ada84a248d557c4d7c