Set application icon globally in aboutData, instead of in MainWidget only.

REVIEW: 116115
BUG: 331491
FIXED-IN: 0.8.0